service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
spec:
  selector:
    app: backend-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80           # Cluster-internal port
      targetPort: 8088   # Your container port
      nodePort: 30080    # Host machine port (Minikube)
